update jgit http server